--- a/BlogFlexConcept/css/style.css
+++ b/BlogFlexConcept/css/style.css
@@ -5,20 +5,29 @@
   font-weight: normal;
   font-style: normal;
 }
+
 :root {
-  --primary-color: ; //TODO:
-  --secondary-color: ; //TODO:
-  --box-shadow-color: rgba(247, 237, 226, 0.4);
+  --primary-color: #f4f3ee;
+  --secondary-color: #343a40;
+  --box-shadow-color: rgba(0, 0, 0, 0.4);
   --default-radius: 15px;
   --overlay-color: rgba(0, 0, 0, 0.2);
-  --person-text-color: #14213d;
+  --header-text-color: #14213d;
+  --details-text-color: #adb5bd;
 }
 /* Reset CSS */
 html {
   scroll-behavior: smooth;
 }
+
 body {
+  background-color: var(--primary-color);
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  justify-items: center;
 }
+
 * {
   padding: 0;
   margin: 0;
@@ -26,14 +35,135 @@ body {
   box-sizing: border-box;
   font-family: "WinkyRough", sans-serif;
 }
+
 img {
   width: 100%;
 }
+
 a {
   text-decoration: none;
+  color: black;
 }
+
+button {
+  cursor: pointer;
+}
+
 ul {
   list-style-type: none;
 }
+
+h1 {
+  font-size: 22px;
+}
+
+::selection {
+  background-color: black;
+  color: white;
+}
 /* End of Rest CSS */
-/* TODO: */
+/* Public Classes */
+.box {
+  border-radius: var(--default-radius);
+  box-shadow: 3px 3px 30px 1px var(--box-shadow-color);
+}
+/* End Public Classes */
+/* Body */
+div.main {
+  width: 80%;
+  margin: 150px auto;
+  height: fit-content;
+  padding: 15px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  justify-items: center;
+}
+
+div.main div.titleHF {
+  width: 80%;
+  margin: 0 auto;
+  height: 60px;
+  line-height: 60px;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  text-align: center;
+  border-radius: var(--default-radius);
+}
+
+div.main div.body {
+  width: 80%;
+  margin: 50px auto;
+  height: fit-content;
+  padding: 15px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  gap: 5px;
+}
+
+div.main div.body div.aside {
+  width: 28%;
+  padding: 15px;
+  height: 70vh;
+}
+
+div.main div.body div.aside ul.menu {
+  width: 100%;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  justify-items: center;
+  gap: 20px;
+}
+
+div.main div.body div.aside ul.menu li.box {
+  text-align: center;
+}
+
+div.main div.body div.aside ul.menu li.box a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  padding: 15px;
+  border-radius: var(--default-radius);
+  font-size: 16px;
+  line-height: 1.6em;
+  font-weight: bold;
+  position: relative;
+}
+
+div.main div.body div.aside ul.menu li.box a::before {
+  content: "";
+  position: absolute;
+  background-color: var(--overlay-color);
+  border-radius: var(--default-radius);
+  top: 0;
+  right: 300px;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  transition: all 0.3s ease 0s;
+}
+
+div.main div.body div.aside ul.menu li.box a:hover::before {
+  animation: mOver 0.9s ease-out forwards;
+}
+
+@keyframes mOver {
+  100% {
+    opacity: 1;
+    right: 0;
+  }
+}
+
+div.main div.body div.content {
+  width: 68%;
+  padding: 15px;
+  background-color: orange;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 10px;
+}
+/* End Body */
