--- a/BlogFlexConcept/css/style.css
+++ b/BlogFlexConcept/css/style.css
@@ -38,6 +38,8 @@ body {
 
 img {
   width: 100%;
+  border-radius: var(--default-radius);
+  cursor: pointer;
 }
 
 a {
@@ -47,6 +49,44 @@ a {
 
 button {
   cursor: pointer;
+  border-radius: var(--default-radius);
+  width: 80%;
+  padding: 15px;
+  margin: 5px auto;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  position: relative;
+  overflow: hidden;
+  z-index: 100;
+}
+
+button::before {
+  content: "";
+  position: absolute;
+  background-color: var(--primary-color);
+  border-radius: var(--default-radius);
+  top: 0;
+  right: 200px;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  transition: all 0.3s ease 0s;
+  z-index: -100;
+}
+
+button:hover::before {
+  animation: mOver 0.9s ease-out forwards;
+}
+
+button:hover {
+  color: var(--secondary-color);
+}
+
+@keyframes mOver {
+  100% {
+    opacity: 1;
+    right: 0;
+  }
 }
 
 ul {
@@ -55,6 +95,10 @@ ul {
 
 h1 {
   font-size: 22px;
+}
+
+i {
+  color: var(--primary-color);
 }
 
 ::selection {
@@ -70,7 +114,7 @@ h1 {
 /* End Public Classes */
 /* Body */
 div.main {
-  width: 80%;
+  width: 90%;
   margin: 150px auto;
   height: fit-content;
   padding: 15px;
@@ -80,6 +124,7 @@ div.main {
   justify-items: center;
 }
 
+/* Header and Footer */
 div.main div.titleHF {
   width: 80%;
   margin: 0 auto;
@@ -90,7 +135,9 @@ div.main div.titleHF {
   text-align: center;
   border-radius: var(--default-radius);
 }
+/* End Of Header and Footer */
 
+/* Body */
 div.main div.body {
   width: 80%;
   margin: 50px auto;
@@ -99,12 +146,11 @@ div.main div.body {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  gap: 5px;
 }
 
+/* Aside */
 div.main div.body div.aside {
-  width: 28%;
-  padding: 15px;
+  width: 18%;
   height: 70vh;
 }
 
@@ -132,6 +178,7 @@ div.main div.body div.aside ul.menu li.box a {
   line-height: 1.6em;
   font-weight: bold;
   position: relative;
+  overflow: hidden;
 }
 
 div.main div.body div.aside ul.menu li.box a::before {
@@ -150,20 +197,46 @@ div.main div.body div.aside ul.menu li.box a::before {
 div.main div.body div.aside ul.menu li.box a:hover::before {
   animation: mOver 0.9s ease-out forwards;
 }
+/* End Of Aside */
 
-@keyframes mOver {
-  100% {
-    opacity: 1;
-    right: 0;
-  }
-}
-
+/* Content */
 div.main div.body div.content {
-  width: 68%;
-  padding: 15px;
-  background-color: orange;
+  width: 80%;
+  height: fit-content;
   display: flex;
   flex-flow: row wrap;
-  gap: 10px;
+  justify-content: center;
+  justify-items: center;
+  gap: 15px;
+  padding: 10px;
 }
+
+div.main div.body div.content div.card {
+  width: 30%;
+  height: fit-content;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  justify-items: center;
+  background-color: white;
+  border-radius: var(--default-radius);
+}
+
+div.main div.body div.content div.card div.card-header {
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  padding: 5px 15px;
+}
+
+div.main div.body div.content div.card div.card-content p {
+  text-align: justify;
+  padding: 10px;
+  font-size: 14px;
+  word-break: break-all;
+}
+
+div.main div.body div.content div.card div.button {
+  text-align: center;
+}
+/* End Of Content */
 /* End Body */
