--- a/SimpleFlexLanding/CSS/style.css
+++ b/SimpleFlexLanding/CSS/style.css
@@ -38,6 +38,17 @@ p {
   line-height: 1.6em;
 }
 
+h1,
+address,
+button {
+  display: block;
+  margin: 35px auto;
+}
+
+button {
+  background: none;
+}
+
 .button {
   background-color: var(--secondary-color);
   color: var(--white);
@@ -56,9 +67,10 @@ p {
 }
 /* End Of Reset CSS */
 /* body */
+/* Header - Nav */
 header nav.main-navigationBar {
   width: 100%;
-  background-color: red;
+  background-color: var(--primary-color);
   padding: 1rem 0;
   margin: 0 auto;
   display: flex;
@@ -66,4 +78,50 @@ header nav.main-navigationBar {
   justify-content: space-around;
   align-items: center;
 }
+
+header nav.main-navigationBar a.navItems {
+  color: var(--dark-color);
+  font-weight: 700;
+  font-size: 1.4rem;
+  text-align: center;
+}
+/* End Of Header - Nav */
+/* Hero Part */
+div.hero {
+  width: 100%;
+  height: 60vh;
+  background-image: url("../src/assets/media/images/HeaderSection.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+  position: relative;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+div.hero::after {
+  content: " ";
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+div.hero div.hero-content {
+  color: var(--white);
+  position: relative;
+  text-align: center;
+  z-index: 1;
+}
+
+div.hero address i {
+  font-size: 3rem;
+  color: var(--primary-color);
+}
+/* End Of Hero Part */
 /* End Of body */
